Compile for java 6.

--- a/trunk/SimpleWorldEditor/nbproject/project.properties
+++ b/trunk/SimpleWorldEditor/nbproject/project.properties
@@ -80,7 +80,7 @@ mkdist.disabled=false
 mobile.android.package=com.mycompany.mygame
 mobile.android.target=android-8
 obfuscate.options=-keep public class * extends com.jme3.app.Application{public *;}\n-keep public class * extends com.jme3.system.JmeSystemDelegate{public *;}\n-keep public class * implements com.jme3.renderer.Renderer{public *;}\n-keep public class * implements com.jme3.asset.AssetLoader{public *;}\n-keep public class * implements com.jme3.asset.AssetLocator{public *;}\n-keep public class * implements de.lessvoid.nifty.screen.ScreenController{public *;}\n-dontwarn\n-dontnote\n
-platform.active=default_platform
+platform.active=JDK1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
