--- a/trunk/SimpleWorldEditor/nbproject/project.properties
+++ b/trunk/SimpleWorldEditor/nbproject/project.properties
@@ -73,7 +73,7 @@ jnlp.signing.alias=
 jnlp.signing.keystore=
 lwjgl.applet.height=480
 lwjgl.applet.width=640
-main.class=com.simpleEditor.SimpleEditorSwing
+main.class=com.swe.SimpleEditorSwing
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
