--- a/trunk/SimpleWorldEditor/nbproject/project.properties
+++ b/trunk/SimpleWorldEditor/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
+file.reference.gson-2.2.4-javadoc.jar=lib/google-gson/gson-2.2.4-javadoc.jar
+file.reference.gson-2.2.4-sources.jar=lib/google-gson/gson-2.2.4-sources.jar
+file.reference.gson-2.2.4.jar=lib/google-gson/gson-2.2.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -39,7 +41,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.gson-2.2.4-javadoc.jar}:\
+    ${file.reference.gson-2.2.4-sources.jar}:\
+    ${file.reference.gson-2.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
