--- a/trunk/SimpleWorldEditor/nbproject/project.properties
+++ b/trunk/SimpleWorldEditor/nbproject/project.properties
@@ -2,6 +2,7 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
+ant.customtasks.libs=launch4j
 application.title=simpleworldeditor
 application.vendor=JME Community
 assets.jar.name=assets.jar
@@ -82,7 +83,6 @@ meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
 mobile.android.package=com.mycompany.mygame
-mobile.android.target=android-8
 obfuscate.options=-keep public class * extends com.jme3.app.Application{public *;}\n-keep public class * extends com.jme3.system.JmeSystemDelegate{public *;}\n-keep public class * implements com.jme3.renderer.Renderer{public *;}\n-keep public class * implements com.jme3.asset.AssetLoader{public *;}\n-keep public class * implements com.jme3.asset.AssetLocator{public *;}\n-keep public class * implements de.lessvoid.nifty.screen.ScreenController{public *;}\n-dontwarn\n-dontnote\n
 platform.active=default_platform
 run.classpath=\
