commited niftygui 1.3.4 snapshot.

--- a/trunk/SimpleWorldEditor/nbproject/project.properties
+++ b/trunk/SimpleWorldEditor/nbproject/project.properties
@@ -35,6 +35,9 @@ excludes=
 file.reference.gson-2.2.4-javadoc.jar=lib/google-gson/gson-2.2.4-javadoc.jar
 file.reference.gson-2.2.4-sources.jar=lib/google-gson/gson-2.2.4-sources.jar
 file.reference.gson-2.2.4.jar=lib/google-gson/gson-2.2.4.jar
+file.reference.nifty-1.3.4-SNAPSHOT.jar=lib/nifty-1.3.4-SNAPSHOT.jar
+file.reference.nifty-default-controls-1.3.4-SNAPSHOT.jar=lib/nifty-default-controls-1.3.4-SNAPSHOT.jar
+file.reference.nifty-style-black-1.3.4-SNAPSHOT.jar=lib/nifty-style-black-1.3.4-SNAPSHOT.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -42,6 +45,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
+    ${file.reference.nifty-1.3.4-SNAPSHOT.jar}:\
+    ${file.reference.nifty-default-controls-1.3.4-SNAPSHOT.jar}:\
+    ${file.reference.nifty-style-black-1.3.4-SNAPSHOT.jar}:\
     ${file.reference.gson-2.2.4-javadoc.jar}:\
     ${file.reference.gson-2.2.4-sources.jar}:\
     ${file.reference.gson-2.2.4.jar}
